<package>

    <name>pathmaker_abb</name>
    <version>1.0.0</version>
    <description>
    ROS Node to send shit to abb arm
    </description>
    <maintainer email="a.vandenberg@heemskerk-innovative.nl">Alex van den Berg</maintainer>
    <author>Alex van den Berg</author>
    <license>new BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>control_msgs</build_depend>
    <build_depend>eigen</build_depend>
    <build_depend>urdf</build_depend>
    <build_depend>moveit_core</build_depend>
    <build_depend>moveit_ros_planning</build_depend>
    <build_depend>moveit_ros_planning_interface</build_depend>
    
    <build_depend>eigen_conversions</build_depend>


    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>control_msgs</run_depend>
    <run_depend>urdf</run_depend>
    <run_depend>moveit_core</run_depend>
    <run_depend>moveit_ros_planning</run_depend>
    <run_depend>moveit_ros_planning_interface</run_depend>

    <run_depend>eigen_conversions</run_depend>


</package>
